{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 11,
  "lineage": "22e9c2c5-28fb-e7a3-9974-4a3b02578de8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444594954620:internet-gateway/igw-0ee8846f6feae73c2",
            "id": "igw-0ee8846f6feae73c2",
            "owner_id": "444594954620",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-09077165ace98f3cb"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e4daa9249bf30aaa",
            "owner_id": "444594954620",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee8846f6feae73c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-09077165ace98f3cb"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0836edcfe7d87c72d",
            "route_table_id": "rtb-0e4daa9249bf30aaa",
            "subnet_id": "subnet-085f9a4c9883bdc1c"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052b7221b4fc48591",
            "route_table_id": "rtb-0e4daa9249bf30aaa",
            "subnet_id": "subnet-03d6313393c66b681"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0389b9967a39592f9",
            "route_table_id": "rtb-0e4daa9249bf30aaa",
            "subnet_id": "subnet-0e7c6d7339b050e4c"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.terraform-public",
            "aws_subnet.subnets",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444594954620:security-group/sg-0a7b85866baa82340",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a7b85866baa82340",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": null,
            "owner_id": "444594954620",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-09077165ace98f3cb"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444594954620:subnet/subnet-085f9a4c9883bdc1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-085f9a4c9883bdc1c",
            "map_public_ip_on_launch": false,
            "owner_id": "444594954620",
            "tags": {
              "Name": "Terraform-Subnet-1"
            },
            "vpc_id": "vpc-09077165ace98f3cb"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444594954620:subnet/subnet-03d6313393c66b681",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-03d6313393c66b681",
            "map_public_ip_on_launch": false,
            "owner_id": "444594954620",
            "tags": {
              "Name": "Terraform-Subnet-2"
            },
            "vpc_id": "vpc-09077165ace98f3cb"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444594954620:subnet/subnet-0e7c6d7339b050e4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0e7c6d7339b050e4c",
            "map_public_ip_on_launch": false,
            "owner_id": "444594954620",
            "tags": {
              "Name": "Terraform-Subnet-3"
            },
            "vpc_id": "vpc-09077165ace98f3cb"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:444594954620:vpc/vpc-09077165ace98f3cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0994ed35d94ed9b2c",
            "default_route_table_id": "rtb-0147635167f9ac19b",
            "default_security_group_id": "sg-0f1f08af620e506fe",
            "dhcp_options_id": "dopt-14ad006e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09077165ace98f3cb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0147635167f9ac19b",
            "owner_id": "444594954620",
            "tags": {
              "Name": "terraform-aws-testing"
            }
          }
        }
      ]
    }
  ]
}